[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playatewsidentitymasker"
version = "1.0.0"
description = "Real-time face masking and identity protection application"
authors = [{name = "PlayaTews Team", email = "team@playatews.com"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["apps", "xlib", "resources"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--cov=apps",
    "--cov=xlib",
    "--cov=resources",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
]
testpaths = ["tests", "apps"]
python_files = ["test_*.py", "*_test.py"]
